resources/experiment/0814-specgen/081401/Branched/log-GyroHealthCheck_Mutant5-2025_08_15_10_51_46.txt
public class GyroHealthCheck_Mutant5 {
    //@ ensures \result == 1 <==> (Math.abs(x - y) >= 10 || Math.abs(y - z) >= 10 || Math.abs(x - z) >= 10);
    //@ ensures \result == 0 <==> (Math.abs(x - y) < 10 && Math.abs(y - z) < 10 && Math.abs(x - z) < 10;
    public static int gyroHealthCheck(int x, int y, int z) {
        int diffXY = x - y;
        if (diffXY < 0) diffXY = -diffXY;
        int diffYZ = y - z;
        if (diffYZ < 0) diffYZ = -diffYZ;
        int diffXZ = x - z;
        if (diffXZ < 0) diffXZ = -diffXZ;
        int alarm = 0;
        if (diffXY >= 10 || diffYZ >= 10 || diffXZ >= 10) {
            alarm = 1;
        }
        return alarm;
    }
}
==============================
/root/specgen/SpecGen/project/081401-specgen/tmp/GyroHealthCheck_Mutant5.java:3: error: ')' expected
    //@ ensures \result == 0 <==> (Math.abs(x - y) < 10 && Math.abs(y - z) < 10 && Math.abs(x - z) < 10;
                                                                                                       ^
1 error

==============================
public class GyroHealthCheck_Mutant5 {
    //@ ensures \result == 1 <==> (Math.abs(x - y) >= 10 || Math.abs(y - z) >= 10 || Math.abs(x - z) >= 10);
    //@ ensures \result == 0 <==> (Math.abs(x - y) < 10 && Math.abs(y - z) < 10 && Math.abs(x - z) < 10);
    public static int gyroHealthCheck(int x, int y, int z) {
        int diffXY = x - y;
        if (diffXY < 0) diffXY = -diffXY;
        int diffYZ = y - z;
        if (diffYZ < 0) diffYZ = -diffYZ;
        int diffXZ = x - z;
        if (diffXZ < 0) diffXZ = -diffXZ;
        int alarm = 0;
        if (diffXY >= 10 || diffYZ >= 10 || diffXZ >= 10) {
            alarm = 1;
        }
        return alarm;
    }
}
==============================

==============================
